nullaway_error_56cfddbb-0d48-484c-a0ba-fd1d5f6c4e9f.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/entities/EntityControllers.java:51: error: [NullAway] dereferenced expression controller is @Nullable
      controller.detach();
                ^
    (see http://t.uber.com/nullaway )
